--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>دائرة الحظ</title>
+  <title>حكييييييم</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,10 +11,10 @@
   <div class="controls">
     <textarea id="namesInput" placeholder="أدخل الأسماء مفصولة بنقطة (.) مثل: حكيم.منير.رهف"></textarea>
     <div class="btn-group">
-      <button onclick="initWheel()">إنشاء</button>
-      <button onclick="startSpin()">دوّر</button>
-      <button onclick="resetGame()">إعادة</button>
-      <button onclick="toggleDarkMode()">وضع ليلي</button>
+      <button onclick="initWheel()">1إنشاء</button>
+      <button onclick="startSpin()">2دوّر</button>
+      <button onclick="resetGame()">3إعادة</button>
+      <button onclick="toggleDarkMode()">4وضع ليلي</button>
     </div>
   </div>
 
