--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>دائرة الحظ</title>
+  <title>حيييييم</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
