--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>حيييييم</title>
+  <title>حكيم</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>حكيم العرب</h1>
+  <h1>111111حكيم العرب</h1>
 
   <div class="controls">
     <textarea id="namesInput" placeholder="أدخل الأسماء مفصولة بنقطة (.) مثل: حكيم.منير.رهف"></textarea>
