Update.index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button onclick="initWheel()">إنشاء</button>
       <button onclick="startSpin()">دوّر</button>
       <button onclick="resetGame()">إعادة</button>
-      <button onclick="toggleDarkMode()">وضع ليلي</button>
+      <button onclick="toggleDarkMode()">وضع ليلي0000</button>
     </div>
   </div>
 
