--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>7386767حكيم العرب</h1>
+  <h1>حكيم العرب</h1>
 
   <div class="controls">
     <textarea id="namesInput" placeholder="أدخل الأسماء مفصولة بنقطة (.) مثل: حكيم.منير.رهف"></textarea>
@@ -14,7 +14,7 @@
       <button onclick="initWheel()">إنشاء</button>
       <button onclick="startSpin()">دوّر</button>
       <button onclick="resetGame()">إعادة</button>
-      <button onclick="toggleDarkMode()">وضع ليلي0000</button>
+      <button onclick="toggleDarkMode()">وضع ليلي</button>
     </div>
   </div>
 
