Change header from 'حكيم العرب' to 'نضال'
Signed-off-by: حكيم العرب <halrb2588@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>حكيم العرب</h1>
+  <h1>نضال</h1>
 
   <div class="controls">
     <textarea id="namesInput" placeholder="أدخل الأسماء مفصولة بنقطة (.) مثل: حكيم.منير.رهف"></textarea>
